# PaypalVerifier

./: README.md
client/: .eslintignore  .eslintrc  .prettierignore  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
client/src/: App.css  App.tsx  index.tsx
client/src/components/: Plum.tsx
client/src/pages/: HomePage.tsx
server/: .env-example  .gitignore  Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20230520_110853_create_table.rs
server/src/: main.rs
server/src/api/: mod.rs  paypal.rs
server/src/entities/: mod.rs  prelude.rs  record.rs
server/src/routes/: mod.rs  v1.rs
