[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3"
# actix-files = "0"
actix-embed = "0.1.0"
rust-embed = { version = "^6.6", features = ["actix", "compression"] }
dotenv = "0.15.0"
log = { version = "0.4", features = ["serde", "std"] }
pretty_env_logger = "0.4"
utoipa = { version = "^3.3.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "^3.1.3", features = ["actix-web"] }
serde = { version = "^1.0.160", features = ["derive"] }
serde_json = "^1.0.96"
reqwest = { version = "0.11.17", features = ["json"] }
async-trait = "0.1.68"
derive_builder = "0.12.0"
sea-orm = { version = "0.11.3", features = [
  "runtime-actix-native-tls",
  "sqlx-sqlite",
  "sqlx-postgres",
] }
migration = { path = "./migration" }
uuid = { version = "^1.3.3", features = ["serde", "v4"] }
base64 = "0.21.0"
